@@ -1,3 +1,5 @@
+- New `FeeModderByForwarder` to adjust our channel fees better for being a forwarding node.
+
 0.11A
 - Make `FundsMover` much less willing to pay extra for more private randomized routes.
 - New `EarningsRebalancer` is now the primary rebalancer to replace the role of `InitialRebalancer` in previous releases; it will base its rebalancing decisions on earnings of each channel.
